C1
File "<input>", line 3
    import FreeCAD
    ^^^^^^
SyntaxError: invalid syntax
